add evaluation api

--- a/src/Evaluation.API/appsettings.Development.json
+++ b/src/Evaluation.API/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "EventBus": "amqp://localhost",
+    "EvaluationDB": "Host=localhost;Database=EvaluationDB;Username=postgres;Password=postgres"
+  },
+  "EventBus": {
+    "SubscriptionClientName": "Evaluation.API"
   }
 }
