add evaluation processor

--- a/src/Evaluation.Processor/Dockerfile
+++ b/src/Evaluation.Processor/Dockerfile
@@ -9,17 +9,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/Evaluation.Processor/Evaluation.Processor.csproj", "src/Evaluation.Processor/"]
-RUN dotnet restore "./src/Evaluation.Processor/./Evaluation.Processor.csproj"
+COPY ["src/AutomaticInterviewEvaluationSystem.Evaluation.Processor/AutomaticInterviewEvaluationSystem.Evaluation.Processor.csproj", "src/AutomaticInterviewEvaluationSystem.Evaluation.Processor/"]
+RUN dotnet restore "./src/AutomaticInterviewEvaluationSystem.Evaluation.Processor/./AutomaticInterviewEvaluationSystem.Evaluation.Processor.csproj"
 COPY . .
-WORKDIR "/src/src/Evaluation.Processor"
-RUN dotnet build "./Evaluation.Processor.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/src/AutomaticInterviewEvaluationSystem.Evaluation.Processor"
+RUN dotnet build "./AutomaticInterviewEvaluationSystem.Evaluation.Processor.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Evaluation.Processor.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./AutomaticInterviewEvaluationSystem.Evaluation.Processor.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Evaluation.Processor.dll"]
+ENTRYPOINT ["dotnet", "AutomaticInterviewEvaluationSystem.Evaluation.Processor.dll"]
